<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       >
    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/photo"
        android:scaleType="fitXY"
        />
      <TextView
          android:id="@+id/text_view_shop_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/image_view_logo"
          android:layout_marginTop="5dp"
          android:text="@string/shop_name"
          android:paddingStart="22dp"
          android:textSize="25sp"
          android:textStyle="bold"
          android:fontFamily="sans-serif-condensed-light"
          android:textFontWeight="400"
          />
      <TextView
          android:id="@+id/text_view_tag_line_shop"
          android:layout_below="@id/text_view_shop_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/tag_line"
          android:paddingStart="25dp"
          android:fontFamily="sans-serif-medium"
          />
        <TextView
            android:id="@+id/text_view_about_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_tag_line_shop"
            android:text=" About us"
            android:fontFamily="sans-serif-condensed-medium"
            />
    <TextView
        android:id="@+id/text_view_about_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_about_heading"
        android:text="@string/about"
        android:paddingStart="8dp"
        android:fontFamily="sans-serif"
        android:textSize="22sp"
        />
      <TextView
          android:id="@+id/text_view_avail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/text_view_about_data"
          android:layout_marginTop="5dp"
          android:text="@string/avail"
          android:paddingStart="5dp"
          android:background="#DCDCDC"
          android:padding="10dp"
          android:textStyle="bold"
          />
    <LinearLayout
        android:id="@+id/linear_layout1_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_avail"
        android:orientation="horizontal"
        android:padding="8dp"
        >
    <ImageView
        android:id="@+id/Image_view_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_location"
        android:layout_marginTop="6dp"
        android:paddingStart="5dp"
        android:background="#6200EE"
        />
     <TextView
         android:id="@+id/text_view_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/address"
         android:layout_marginTop="6dp"
         android:paddingLeft="5dp"
         android:fontFamily="sans-serif-black"
         />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_layout12_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout1_address"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:padding="8dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#6200EE"
            android:src="@drawable/ic_phone"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone_number"
            android:paddingLeft="5dp"
            android:fontFamily="sans-serif-black"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_layout_3_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear_layout12_contact"
        android:layout_marginTop="5dp"
        android:padding="8dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#6200EE"
            android:src="@drawable/ic_email"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:text="@string/email"
            android:fontFamily="sans-serif-black"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_layout_5_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear_layout_3_email"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_access_time"
            android:background="#6200EE"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  10:00 Am-to-10:00 Pm"
            android:fontFamily="sans-serif-black"
            />
    </LinearLayout>
   </LinearLayout>

</ScrollView>